0.05 2023-04-28
  [Prerequirement Changes]
    * SPVM 0.971008+ is required.
  [Meta Information Fix]
    * Fixed the repository URL.
  [Test Improvement]
    * Added CIs
  [License Change]
    * The license is changed to MIT License.
0.04  2023-03-19
  [Internal Compatible Changes]
    * Use SPVM::ExchangeAPI method instead of SPVM functions.
0.03  2022-08-03
  [Test Fix]
  * Fix the broken codes and tests by upgrading SPVM.

0.02  2022-06-20
  [CHANGES]
  * SPVM::JSON first development release.

0.01  2022-02-01
  [CHANGES]
  * SPVM::JSON first development release.