@@ -25,8 +25,10 @@ class JSON : precompile {
   has canonical : rw byte;
   
   # Class Methods
-  static method new : JSON () {
+  static method new : JSON ($options : object[]) {
     my $self = new JSON;
+    
+    $self->init($options);
     
     return $self;
   }
@@ -83,6 +85,16 @@ class JSON : precompile {
   }
   
   # Instance Methods
+  private method init : void ($options : object[]) {
+    my $options_h = Hash->new($options);
+    
+    $self->{canonical} = (byte)$options_h->delete_or_default_int("canonical", 1);
+    
+    for my $name (@{$options_h->keys}) {
+      die "The \"$name\" option is not supported";
+    }
+  }
+  
   method encode : string ($object : object) {
     return $self->_encode_recursive($object, 0);
   }
